--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <img id="dp" src="images/profilepic.jpeg" alt="Philona's picture" height="340"/><br/>
     <h2><img src="images/person.png" height="50"> About me <img src="images/person.png" height="50"></h2>
-    <p id="about">I am Philona Reetha Sebastian, an Undergraduate Student at Cochin University of Science and Technology<br/> pursuing BTech in Information Technology and currently I am in my Sophomore year.<br/>In Addition to that I am a Web Developer, Flutter Developer and Python Developer</p>
+    <p id="about">I am Philona Reetha Sebastian, an Undergraduate Student at Cochin University of Science and Technology<br/> pursuing BTech in Information Technology and currently I am in my Junior year.<br/>In Addition to that I am a Web Developer, Flutter Developer and Python Developer</p>
     <div class="skills">
         <h2><img src="images/worker.png" height="50"> My Skills <img src="images/worker.png" height="50"></h2>
         <div class="skill-row">
